twitch refactoring