@@ -1,46 +1,34 @@
 package com.donfaq.ruchi.config;
 
-import org.springframework.beans.factory.annotation.Value;
+import com.donfaq.ruchi.component.RequestLoggingInterceptor;
+import com.donfaq.ruchi.component.TwitchHeadersInterceptor;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpRequest;
-import org.springframework.http.client.ClientHttpRequestExecution;
-import org.springframework.http.client.ClientHttpRequestInterceptor;
-import org.springframework.http.client.ClientHttpResponse;
 import org.springframework.security.oauth2.client.DefaultOAuth2ClientContext;
 import org.springframework.security.oauth2.client.OAuth2RestTemplate;
 import org.springframework.security.oauth2.client.resource.OAuth2ProtectedResourceDetails;
 import org.springframework.security.oauth2.client.token.AccessTokenRequest;
 import org.springframework.security.oauth2.client.token.DefaultAccessTokenRequest;
 
-import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 
 @Configuration
+@RequiredArgsConstructor
 class OAuth2ClientConfig {
 
-    @Value("${twitch.clientId}")
-    private String twitchClientId;
+    private final RequestLoggingInterceptor requestLoggingInterceptor;
+    private final TwitchHeadersInterceptor twitchHeadersInterceptor;
 
     @Bean
     public OAuth2RestTemplate twitchOauth2RestTemplate(OAuth2ProtectedResourceDetails details) {
         AccessTokenRequest atr = new DefaultAccessTokenRequest();
         OAuth2RestTemplate restTemplate = new OAuth2RestTemplate(details, new DefaultOAuth2ClientContext(atr));
         restTemplate.setInterceptors(
-                Collections.singletonList(new ClientIdHeaderInterceptor())
+                List.of(twitchHeadersInterceptor, requestLoggingInterceptor)
         );
         return restTemplate;
     }
 
-    class ClientIdHeaderInterceptor implements ClientHttpRequestInterceptor {
-        @Override
-        public ClientHttpResponse intercept(HttpRequest request, byte[] body,
-                                            ClientHttpRequestExecution execution) throws IOException {
-            HttpHeaders headers = request.getHeaders();
-            headers.add("Client-ID", twitchClientId);
-            return execution.execute(request, body);
-        }
-    }
 }
